run latest experiments

--- a/notebooks/2_Challenge1_Experiments.ipynb
+++ b/notebooks/2_Challenge1_Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -149,7 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -293,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -662,6 +670,177 @@
     "                        --num_folds \"5\" \\\n",
     "                        --batch_size \"32\" \\\n",
     "                        --verbose \"1\"'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running inference on the previous experiment using the validation dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting inference script...\n",
+      "Constructed output path: outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-03_2157_VGG16_BN_Attention. Searching for models...\n",
+      "Found 5 models. Starting loading the models.\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n",
+      "Loading data with 2 class labels from ../datasets/challenge1/val path...\n",
+      "Dataset labels: {'nevus': 0, 'others': 1} dictionary.\n",
+      "Loading the data from ../datasets/challenge1/val\n",
+      "Dataset length: 3796\n",
+      "\n",
+      "Inference:   0%|          | 0/119 [00:00<?, ?it/s]\n",
+      "Inference:   1%|          | 1/119 [00:19<37:44, 19.19s/it]\n",
+      "Inference:   2%|▏         | 2/119 [00:36<35:48, 18.36s/it]\n",
+      "Inference:   3%|▎         | 3/119 [00:54<35:07, 18.17s/it]\n",
+      "Inference:   3%|▎         | 4/119 [01:12<34:27, 17.98s/it]\n",
+      "Inference:   4%|▍         | 5/119 [01:30<34:04, 17.93s/it]\n",
+      "Inference:   5%|▌         | 6/119 [01:48<33:44, 17.92s/it]\n",
+      "Inference:   6%|▌         | 7/119 [02:06<33:23, 17.89s/it]\n",
+      "Inference:   7%|▋         | 8/119 [02:24<33:18, 18.00s/it]\n",
+      "Inference:   8%|▊         | 9/119 [02:42<32:55, 17.96s/it]\n",
+      "Inference:   8%|▊         | 10/119 [03:00<32:43, 18.01s/it]\n",
+      "Inference:   9%|▉         | 11/119 [03:18<32:12, 17.89s/it]\n",
+      "Inference:  10%|█         | 12/119 [03:35<31:55, 17.90s/it]\n",
+      "Inference:  11%|█         | 13/119 [03:54<31:50, 18.03s/it]\n",
+      "Inference:  12%|█▏        | 14/119 [04:12<31:30, 18.00s/it]\n",
+      "Inference:  13%|█▎        | 15/119 [04:29<30:59, 17.88s/it]\n",
+      "Inference:  13%|█▎        | 16/119 [04:47<30:50, 17.97s/it]\n",
+      "Inference:  14%|█▍        | 17/119 [05:06<30:35, 18.00s/it]\n",
+      "Inference:  15%|█▌        | 18/119 [05:24<30:26, 18.08s/it]\n",
+      "Inference:  16%|█▌        | 19/119 [05:42<30:14, 18.14s/it]\n",
+      "Inference:  17%|█▋        | 20/119 [06:00<30:02, 18.21s/it]\n",
+      "Inference:  18%|█▊        | 21/119 [06:19<29:40, 18.17s/it]\n",
+      "Inference:  18%|█▊        | 22/119 [06:36<29:13, 18.07s/it]\n",
+      "Inference:  19%|█▉        | 23/119 [06:54<28:48, 18.00s/it]\n",
+      "Inference:  20%|██        | 24/119 [07:12<28:23, 17.93s/it]\n",
+      "Inference:  21%|██        | 25/119 [07:30<27:59, 17.86s/it]\n",
+      "Inference:  22%|██▏       | 26/119 [07:48<27:57, 18.03s/it]\n",
+      "Inference:  23%|██▎       | 27/119 [08:06<27:43, 18.08s/it]\n",
+      "Inference:  24%|██▎       | 28/119 [08:24<27:18, 18.00s/it]\n",
+      "Inference:  24%|██▍       | 29/119 [08:42<26:50, 17.89s/it]\n",
+      "Inference:  25%|██▌       | 30/119 [08:59<26:22, 17.78s/it]\n",
+      "Inference:  26%|██▌       | 31/119 [09:17<26:11, 17.86s/it]\n",
+      "Inference:  27%|██▋       | 32/119 [09:35<25:58, 17.91s/it]\n",
+      "Inference:  28%|██▊       | 33/119 [09:53<25:38, 17.89s/it]\n",
+      "Inference:  29%|██▊       | 34/119 [10:11<25:23, 17.93s/it]\n",
+      "Inference:  29%|██▉       | 35/119 [10:29<25:01, 17.88s/it]\n",
+      "Inference:  30%|███       | 36/119 [10:47<24:42, 17.86s/it]\n",
+      "Inference:  31%|███       | 37/119 [11:04<24:20, 17.81s/it]\n",
+      "Inference:  32%|███▏      | 38/119 [11:22<24:05, 17.84s/it]\n",
+      "Inference:  33%|███▎      | 39/119 [11:40<23:45, 17.82s/it]\n",
+      "Inference:  34%|███▎      | 40/119 [11:58<23:28, 17.83s/it]\n",
+      "Inference:  34%|███▍      | 41/119 [12:17<23:33, 18.12s/it]\n",
+      "Inference:  35%|███▌      | 42/119 [12:35<23:09, 18.04s/it]\n",
+      "Inference:  36%|███▌      | 43/119 [12:53<22:46, 17.98s/it]\n",
+      "Inference:  37%|███▋      | 44/119 [13:11<22:31, 18.02s/it]\n",
+      "Inference:  38%|███▊      | 45/119 [13:29<22:13, 18.02s/it]\n",
+      "Inference:  39%|███▊      | 46/119 [13:47<21:51, 17.97s/it]\n",
+      "Inference:  39%|███▉      | 47/119 [14:05<21:55, 18.28s/it]\n",
+      "Inference:  40%|████      | 48/119 [14:25<22:02, 18.62s/it]\n",
+      "Inference:  41%|████      | 49/119 [14:44<21:44, 18.63s/it]\n",
+      "Inference:  42%|████▏     | 50/119 [15:03<21:37, 18.80s/it]\n",
+      "Inference:  43%|████▎     | 51/119 [15:22<21:19, 18.82s/it]\n",
+      "Inference:  44%|████▎     | 52/119 [15:39<20:41, 18.53s/it]\n",
+      "Inference:  45%|████▍     | 53/119 [15:58<20:14, 18.40s/it]\n",
+      "Inference:  45%|████▌     | 54/119 [16:16<19:49, 18.31s/it]\n",
+      "Inference:  46%|████▌     | 55/119 [16:34<19:25, 18.22s/it]\n",
+      "Inference:  47%|████▋     | 56/119 [16:52<19:00, 18.11s/it]\n",
+      "Inference:  48%|████▊     | 57/119 [17:09<18:38, 18.04s/it]\n",
+      "Inference:  49%|████▊     | 58/119 [17:27<18:16, 17.98s/it]\n",
+      "Inference:  50%|████▉     | 59/119 [17:45<17:58, 17.97s/it]\n",
+      "Inference:  50%|█████     | 60/119 [18:03<17:37, 17.92s/it]\n",
+      "Inference:  51%|█████▏    | 61/119 [18:21<17:16, 17.87s/it]\n",
+      "Inference:  52%|█████▏    | 62/119 [18:40<17:26, 18.36s/it]\n",
+      "Inference:  53%|█████▎    | 63/119 [18:59<17:07, 18.35s/it]\n",
+      "Inference:  54%|█████▍    | 64/119 [19:18<16:58, 18.52s/it]\n",
+      "Inference:  55%|█████▍    | 65/119 [19:36<16:33, 18.39s/it]\n",
+      "Inference:  55%|█████▌    | 66/119 [19:54<16:07, 18.26s/it]\n",
+      "Inference:  56%|█████▋    | 67/119 [20:11<15:43, 18.14s/it]\n",
+      "Inference:  57%|█████▋    | 68/119 [20:29<15:22, 18.10s/it]\n",
+      "Inference:  58%|█████▊    | 69/119 [20:47<15:02, 18.04s/it]\n",
+      "Inference:  59%|█████▉    | 70/119 [21:05<14:45, 18.07s/it]\n",
+      "Inference:  60%|█████▉    | 71/119 [21:23<14:24, 18.01s/it]\n",
+      "Inference:  61%|██████    | 72/119 [21:41<14:06, 18.01s/it]\n",
+      "Inference:  61%|██████▏   | 73/119 [21:59<13:48, 18.01s/it]\n",
+      "Inference:  62%|██████▏   | 74/119 [22:17<13:27, 17.94s/it]\n",
+      "Inference:  63%|██████▎   | 75/119 [22:35<13:09, 17.95s/it]\n",
+      "Inference:  64%|██████▍   | 76/119 [22:53<12:51, 17.95s/it]\n",
+      "Inference:  65%|██████▍   | 77/119 [23:12<12:40, 18.11s/it]\n",
+      "Inference:  66%|██████▌   | 78/119 [23:29<12:19, 18.04s/it]\n",
+      "Inference:  66%|██████▋   | 79/119 [23:47<12:01, 18.05s/it]\n",
+      "Inference:  67%|██████▋   | 80/119 [24:05<11:41, 17.99s/it]\n",
+      "Inference:  68%|██████▊   | 81/119 [24:23<11:22, 17.97s/it]\n",
+      "Inference:  69%|██████▉   | 82/119 [24:41<11:05, 17.98s/it]\n",
+      "Inference:  70%|██████▉   | 83/119 [24:59<10:49, 18.04s/it]\n",
+      "Inference:  71%|███████   | 84/119 [25:17<10:29, 17.98s/it]\n",
+      "Inference:  71%|███████▏  | 85/119 [25:35<10:13, 18.04s/it]\n",
+      "Inference:  72%|███████▏  | 86/119 [25:53<09:54, 18.02s/it]\n",
+      "Inference:  73%|███████▎  | 87/119 [26:11<09:36, 18.01s/it]\n",
+      "Inference:  74%|███████▍  | 88/119 [26:29<09:18, 18.01s/it]\n",
+      "Inference:  75%|███████▍  | 89/119 [26:47<09:00, 18.00s/it]\n",
+      "Inference:  76%|███████▌  | 90/119 [27:06<08:43, 18.06s/it]\n",
+      "Inference:  76%|███████▋  | 91/119 [27:24<08:24, 18.03s/it]\n",
+      "Inference:  77%|███████▋  | 92/119 [27:41<08:04, 17.95s/it]\n",
+      "Inference:  78%|███████▊  | 93/119 [27:59<07:48, 18.01s/it]\n",
+      "Inference:  79%|███████▉  | 94/119 [28:17<07:28, 17.92s/it]\n",
+      "Inference:  80%|███████▉  | 95/119 [28:35<07:09, 17.88s/it]\n",
+      "Inference:  81%|████████  | 96/119 [28:53<06:51, 17.91s/it]\n",
+      "Inference:  82%|████████▏ | 97/119 [29:11<06:34, 17.92s/it]\n",
+      "Inference:  82%|████████▏ | 98/119 [29:29<06:16, 17.95s/it]\n",
+      "Inference:  83%|████████▎ | 99/119 [29:47<05:57, 17.88s/it]\n",
+      "Inference:  84%|████████▍ | 100/119 [30:05<05:40, 17.90s/it]\n",
+      "Inference:  85%|████████▍ | 101/119 [30:22<05:21, 17.86s/it]\n",
+      "Inference:  86%|████████▌ | 102/119 [30:40<05:03, 17.85s/it]\n",
+      "Inference:  87%|████████▋ | 103/119 [30:58<04:46, 17.88s/it]\n",
+      "Inference:  87%|████████▋ | 104/119 [31:16<04:28, 17.88s/it]\n",
+      "Inference:  88%|████████▊ | 105/119 [31:34<04:09, 17.84s/it]\n",
+      "Inference:  89%|████████▉ | 106/119 [31:52<03:52, 17.87s/it]\n",
+      "Inference:  90%|████████▉ | 107/119 [32:10<03:35, 17.92s/it]\n",
+      "Inference:  91%|█████████ | 108/119 [32:28<03:17, 17.95s/it]\n",
+      "Inference:  92%|█████████▏| 109/119 [32:45<02:58, 17.89s/it]\n",
+      "Inference:  92%|█████████▏| 110/119 [33:03<02:40, 17.86s/it]\n",
+      "Inference:  93%|█████████▎| 111/119 [33:21<02:22, 17.87s/it]\n",
+      "Inference:  94%|█████████▍| 112/119 [33:39<02:04, 17.85s/it]\n",
+      "Inference:  95%|█████████▍| 113/119 [33:57<01:47, 17.84s/it]\n",
+      "Inference:  96%|█████████▌| 114/119 [34:14<01:28, 17.79s/it]\n",
+      "Inference:  97%|█████████▋| 115/119 [34:32<01:11, 17.81s/it]\n",
+      "Inference:  97%|█████████▋| 116/119 [34:50<00:53, 17.75s/it]\n",
+      "Inference:  98%|█████████▊| 117/119 [35:08<00:35, 17.76s/it]\n",
+      "Inference:  99%|█████████▉| 118/119 [35:26<00:17, 17.77s/it]\n",
+      "Inference: 100%|██████████| 119/119 [35:37<00:00, 15.85s/it]\n",
+      "Inference: 100%|██████████| 119/119 [35:37<00:00, 17.96s/it]\n",
+      "Majority vote accuracy: 0.9230769230769231\n",
+      "Majority vote kappa: 0.8459548756987352\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = 'python ../inference.py --test_path \"../datasets/challenge1/val\" \\\n",
+    "                    --experiment_name \"ClassifierExperimentCV\" \\\n",
+    "                    --network_name \"VGG16_BN_Attention\" \\\n",
+    "                    --max_epochs \"20\" \\\n",
+    "                    --batch_size \"32\" \\\n",
+    "                    --timeframe \"2023-12-03_2157\" \\\n",
+    "                    --verbose \"2\" \\\n",
+    "                    --report'\n",
     "\n",
     "# run the function to excute the command\n",
     "_ = execute_cmd_realtime(command, log=True)"
