--- a/notebooks/4_kflod_ensemble_experimenting.ipynb
+++ b/notebooks/4_kflod_ensemble_experimenting.ipynb
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "<data_prep.dataset.Dataset at 0x7f8ec9209cf0>"
+       "<data_prep.dataset.Dataset at 0x7f1792b1e530>"
       ]
      },
      "execution_count": 3,
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.utils.data.dataloader.DataLoader at 0x7f8ec920a320>"
+       "<torch.utils.data.dataloader.DataLoader at 0x7f1792b1e3e0>"
       ]
      },
      "execution_count": 4,
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d59f77e8-d5ab-4d12-a149-a0e5d2fa443a",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c67f29c9-6188-4970-b77e-192656c15afd",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "eb0e5d9c-feda-47cd-81cb-2fc4f25181bf",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "(18991,)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "93ad32af-d1b9-45c0-93d9-4d6d2ac03845",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "(18991,)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e210e456-88b3-49ad-825b-cf260c3e413d",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "48ca39a5-542f-43d2-aa5b-673a9d064c92",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
        "[18991 rows x 2 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "78fc50df-afb3-41ec-9630-33a3b884145b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1532,6 +1534,22 @@
     "print(f\"Ensemble Cohen's Kappa: {kappa}\")\n",
     "print(f\"Ensemble AUC: {auc}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79b0259e-2c2f-41ca-9184-7c6268ddec42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a714014-a96b-4047-ad68-7d5c472ff885",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
