finalize inference script

--- a/notebooks/5_Challenge2_Experiments.ipynb
+++ b/notebooks/5_Challenge2_Experiments.ipynb
@@ -2,15 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "84b61607-f287-4690-a4af-66251f6b5c77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
     "\n",
     "from utils.utils import excute_cmd, execute_cmd_realtime\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline\n",
     "\n",
     "# To allow auto reload to this notebook after modifying any external file imported\n",
     "%load_ext autoreload\n",
@@ -484,11 +496,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d2e8a88c-cdad-4d68-a87f-587fa4ec9b0a",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 24,
+   "id": "171452ea-544e-4fc3-85aa-74746270a71d",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -506,51 +516,78 @@
       "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
       "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
       "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Namespace(test_path='../datasets/challenge2/val', output='outputs', experiment_name='ClassifierExperimentCV', network_name='VGG16_BN_Attention', max_epochs=20, batch_size=32, base_lr=0.0001, img_size=224, seed=42, timeframe='2023-12-08_0912', verbose=2, multi=True, report=True)\n",
       "\n",
       "Inference:   0%|          | 0/40 [00:00<?, ?it/s]\n",
-      "Inference:   2%|▎         | 1/40 [00:22<14:38, 22.52s/it]\n",
-      "Inference:   5%|▌         | 2/40 [00:41<12:57, 20.45s/it]\n",
-      "Inference:   8%|▊         | 3/40 [00:59<11:54, 19.31s/it]\n",
-      "Inference:  10%|█         | 4/40 [01:17<11:12, 18.68s/it]\n",
-      "Inference:  12%|█▎        | 5/40 [01:35<10:49, 18.56s/it]\n",
-      "Inference:  15%|█▌        | 6/40 [01:53<10:26, 18.42s/it]\n",
-      "Inference:  18%|█▊        | 7/40 [02:12<10:10, 18.50s/it]\n",
-      "Inference:  20%|██        | 8/40 [02:31<09:53, 18.56s/it]\n",
-      "Inference:  22%|██▎       | 9/40 [02:49<09:34, 18.54s/it]\n",
-      "Inference:  25%|██▌       | 10/40 [03:07<09:14, 18.50s/it]\n",
-      "Inference:  28%|██▊       | 11/40 [03:26<08:53, 18.41s/it]\n",
-      "Inference:  30%|███       | 12/40 [03:44<08:34, 18.37s/it]\n",
-      "Inference:  32%|███▎      | 13/40 [04:02<08:14, 18.30s/it]\n",
-      "Inference:  35%|███▌      | 14/40 [04:20<07:55, 18.29s/it]\n",
-      "Inference:  38%|███▊      | 15/40 [04:39<07:37, 18.31s/it]\n",
-      "Inference:  40%|████      | 16/40 [04:57<07:22, 18.44s/it]\n",
-      "Inference:  42%|████▎     | 17/40 [05:16<07:03, 18.40s/it]\n",
-      "Inference:  45%|████▌     | 18/40 [05:35<06:50, 18.64s/it]\n",
-      "Inference:  48%|████▊     | 19/40 [05:55<06:38, 18.99s/it]\n",
-      "Inference:  50%|█████     | 20/40 [06:13<06:13, 18.68s/it]\n",
-      "Inference:  52%|█████▎    | 21/40 [06:32<05:59, 18.90s/it]\n",
-      "Inference:  55%|█████▌    | 22/40 [06:52<05:44, 19.12s/it]\n",
-      "Inference:  57%|█████▊    | 23/40 [07:10<05:20, 18.88s/it]\n",
-      "Inference:  60%|██████    | 24/40 [07:28<04:58, 18.65s/it]\n",
-      "Inference:  62%|██████▎   | 25/40 [07:47<04:39, 18.63s/it]\n",
-      "Inference:  65%|██████▌   | 26/40 [08:05<04:19, 18.52s/it]\n",
-      "Inference:  68%|██████▊   | 27/40 [08:24<04:00, 18.53s/it]\n",
-      "Inference:  70%|███████   | 28/40 [08:41<03:39, 18.32s/it]\n",
-      "Inference:  72%|███████▎  | 29/40 [09:00<03:21, 18.31s/it]\n",
-      "Inference:  75%|███████▌  | 30/40 [09:19<03:05, 18.51s/it]\n",
-      "Inference:  78%|███████▊  | 31/40 [09:38<02:47, 18.66s/it]\n",
-      "Inference:  80%|████████  | 32/40 [09:56<02:28, 18.52s/it]\n",
-      "Inference:  82%|████████▎ | 33/40 [10:13<02:07, 18.25s/it]\n",
-      "Inference:  85%|████████▌ | 34/40 [10:32<01:50, 18.35s/it]\n",
-      "Inference:  88%|████████▊ | 35/40 [10:51<01:32, 18.50s/it]\n",
-      "Inference:  90%|█████████ | 36/40 [11:10<01:14, 18.54s/it]\n",
-      "Inference:  92%|█████████▎| 37/40 [11:28<00:55, 18.46s/it]\n",
-      "Inference:  95%|█████████▌| 38/40 [11:47<00:37, 18.53s/it]\n",
-      "Inference:  98%|█████████▊| 39/40 [12:05<00:18, 18.36s/it]\n",
-      "Inference: 100%|██████████| 40/40 [12:17<00:00, 16.59s/it]\n",
-      "Inference: 100%|██████████| 40/40 [12:17<00:00, 18.44s/it]\n",
+      "Inference:   2%|▎         | 1/40 [00:18<12:12, 18.78s/it]\n",
+      "Inference:   5%|▌         | 2/40 [00:35<11:11, 17.67s/it]\n",
+      "Inference:   8%|▊         | 3/40 [00:52<10:40, 17.31s/it]\n",
+      "Inference:  10%|█         | 4/40 [01:10<10:27, 17.44s/it]\n",
+      "Inference:  12%|█▎        | 5/40 [01:26<09:58, 17.10s/it]\n",
+      "Inference:  15%|█▌        | 6/40 [01:44<09:46, 17.25s/it]\n",
+      "Inference:  18%|█▊        | 7/40 [02:01<09:33, 17.37s/it]\n",
+      "Inference:  20%|██        | 8/40 [02:19<09:20, 17.51s/it]\n",
+      "Inference:  22%|██▎       | 9/40 [02:36<08:57, 17.35s/it]\n",
+      "Inference:  25%|██▌       | 10/40 [02:53<08:37, 17.26s/it]\n",
+      "Inference:  28%|██▊       | 11/40 [03:10<08:16, 17.12s/it]\n",
+      "Inference:  30%|███       | 12/40 [03:27<07:59, 17.13s/it]\n",
+      "Inference:  32%|███▎      | 13/40 [03:44<07:42, 17.14s/it]\n",
+      "Inference:  35%|███▌      | 14/40 [04:02<07:30, 17.32s/it]\n",
+      "Inference:  38%|███▊      | 15/40 [04:20<07:13, 17.35s/it]\n",
+      "Inference:  40%|████      | 16/40 [04:36<06:52, 17.18s/it]\n",
+      "Inference:  42%|████▎     | 17/40 [04:53<06:29, 16.92s/it]\n",
+      "Inference:  45%|████▌     | 18/40 [05:08<06:04, 16.57s/it]\n",
+      "Inference:  48%|████▊     | 19/40 [05:24<05:43, 16.34s/it]\n",
+      "Inference:  50%|█████     | 20/40 [05:40<05:23, 16.15s/it]\n",
+      "Inference:  52%|█████▎    | 21/40 [05:56<05:05, 16.07s/it]\n",
+      "Inference:  55%|█████▌    | 22/40 [06:11<04:47, 15.95s/it]\n",
+      "Inference:  57%|█████▊    | 23/40 [06:27<04:30, 15.88s/it]\n",
+      "Inference:  60%|██████    | 24/40 [06:43<04:14, 15.89s/it]\n",
+      "Inference:  62%|██████▎   | 25/40 [06:59<03:57, 15.86s/it]\n",
+      "Inference:  65%|██████▌   | 26/40 [07:15<03:41, 15.82s/it]\n",
+      "Inference:  68%|██████▊   | 27/40 [07:31<03:26, 15.85s/it]\n",
+      "Inference:  70%|███████   | 28/40 [07:46<03:10, 15.84s/it]\n",
+      "Inference:  72%|███████▎  | 29/40 [08:02<02:54, 15.90s/it]\n",
+      "Inference:  75%|███████▌  | 30/40 [08:18<02:39, 15.92s/it]\n",
+      "Inference:  78%|███████▊  | 31/40 [08:34<02:23, 15.93s/it]\n",
+      "Inference:  80%|████████  | 32/40 [08:50<02:07, 15.89s/it]\n",
+      "Inference:  82%|████████▎ | 33/40 [09:06<01:50, 15.79s/it]\n",
+      "Inference:  85%|████████▌ | 34/40 [09:21<01:34, 15.78s/it]\n",
+      "Inference:  88%|████████▊ | 35/40 [09:37<01:18, 15.78s/it]\n",
+      "Inference:  90%|█████████ | 36/40 [09:53<01:02, 15.74s/it]\n",
+      "Inference:  92%|█████████▎| 37/40 [10:09<00:47, 15.77s/it]\n",
+      "Inference:  95%|█████████▌| 38/40 [10:24<00:31, 15.73s/it]\n",
+      "Inference:  98%|█████████▊| 39/40 [10:40<00:15, 15.76s/it]\n",
+      "Inference: 100%|██████████| 40/40 [10:51<00:00, 14.28s/it]\n",
+      "Inference: 100%|██████████| 40/40 [10:51<00:00, 16.29s/it]\n",
+      "Results exported to: outputs/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42/2023-12-08_0912_VGG16_BN_Attention/ClassifierExperimentCV_224_epo20_bs32_lr0.0001_s42_2023-12-08_0912_VGG16_BN_Attention.csv\n",
+      "Computing AUC scores for each class...\n",
+      "Majority vote AUC: 0.99810\n",
+      "Majority vote AUC Scores: [0.9975285  0.99858241 0.99819981]\n",
       "Majority vote accuracy: 0.9732283464566929\n",
-      "Majority vote kappa: 0.9518017957682021\n"
+      "Majority vote kappa: 0.9518017957682021\n",
+      "Target 0 - Precision: 0.98368, Recall: 0.97788, F-score: 0.98077, Sensitivity: 0.9778761061946902, Specificity: 0.981418918918919, Support: 678\n",
+      "Target 1 - Precision: 0.96832, Recall: 0.98193, F-score: 0.97507, Sensitivity: 0.9819277108433735, Specificity: 0.9792746113989638, Support: 498\n",
+      "Target 2 - Precision: 0.92308, Recall: 0.89362, F-score: 0.90811, Sensitivity: 0.8936170212765957, Specificity: 0.9940476190476191, Support: 94\n",
+      "Figure(1500x600)\n",
+      "(   {   'accuracy': 0.9732283464566929,\n",
+      "        'auc': 0.9981035754482238,\n",
+      "        'auc_scores': [   0.9975285019532807,\n",
+      "                          0.9985824125517614,\n",
+      "                          0.9981998118396295],\n",
+      "        'fscore': [0.9807692307692308, 0.9750747756729811, 0.908108108108108],\n",
+      "        'kappa': 0.9518017957682021,\n",
+      "        'precision': [   0.983679525222552,\n",
+      "                         0.9683168316831683,\n",
+      "                         0.9230769230769231],\n",
+      "        'recall': [0.9778761061946902, 0.9819277108433735, 0.8936170212765957],\n",
+      "        'sensitivity': [   0.9778761061946902,\n",
+      "                           0.9819277108433735,\n",
+      "                           0.8936170212765957],\n",
+      "        'specificity': [   0.981418918918919,\n",
+      "                           0.9792746113989638,\n",
+      "                           0.9940476190476191],\n",
+      "        'support': [678, 498, 94]},)\n"
      ]
     }
    ],
@@ -562,12 +599,20 @@
     "                    --batch_size \"32\" \\\n",
     "                    --timeframe \"2023-12-08_0912\" \\\n",
     "                    --verbose \"2\" \\\n",
-    "                    --report \\\n",
-    "                    --multi'\n",
+    "                    --multi \\\n",
+    "                    --report'\n",
     "\n",
     "# run the function to excute the command\n",
     "_ = execute_cmd_realtime(command, log=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ad0a368-4437-46a2-aae9-f55a67247491",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
