introducing masks in all pipelines, inference on gpu

--- a/notebooks/1_Exploring_models.ipynb
+++ b/notebooks/1_Exploring_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "1e3ef3fb-f834-4d2d-b458-6029e1f4b6b9",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d5d62b98-f465-47ab-8146-72330244e2e7",
    "metadata": {},
    "outputs": [],
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "322a4b21-e04a-4fa6-aad1-0a1190ccc40e",
    "metadata": {},
    "outputs": [
@@ -3106,7 +3106,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2023-11-25 12:46:37.070\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mnetworks.VGG16\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m69\u001b[0m - \u001b[1mUsing VGG16_BN_Attention with configurations: num_classes='2'\u001b[0m\n"
+      "Using VGG16_BN_Attention with configurations: num_classes='2', normalize_attn='False'\n"
      ]
     }
    ],
@@ -3116,7 +3116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "c437796f-533e-4d97-a4fc-55e79c767b87",
    "metadata": {},
    "outputs": [
@@ -3205,7 +3205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "4e313c21-f3f6-4508-9427-a7c89ae627ec",
    "metadata": {},
    "outputs": [
@@ -3285,12 +3285,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "af5d3074-f3f4-424c-8c65-d50877a98597",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# summary(vgg16bn_attention, input_size=(3, 224, 224))"
+    "# summary(vgg16bn_attention, input_size=(32, 224, 224))"
    ]
   }
  ],
