--- a/notebooks/5_Challenge2_Experiments.ipynb
+++ b/notebooks/5_Challenge2_Experiments.ipynb
@@ -205,7 +205,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "bb3ba254-55f0-49b0-845f-39e1f6e51b4b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
