latest server runs, best results

--- a/notebooks/3_segmentation.ipynb
+++ b/notebooks/3_segmentation.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "c7019f38-c046-47b9-bace-5e7c9d13550d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append('../')\n",
@@ -912,7 +921,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|██████████████████████████████████████████████████████████████████████████████████████▌                                              | 1298/1993 [14:13:58<4:21:29, 22.57s/it]"
+      " 59%|█████████████████████████████████████████████████████████████████████████████▉                                                       | 1167/1993 [13:25:59<3:59:27, 17.39s/it]"
      ]
     }
    ],
@@ -942,12 +951,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25aae9a4-c1ee-47ba-a0e8-df557d20521e",
+   "metadata": {},
+   "source": [
+    "Continue segmenting challenge 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60484b6f-c13c-429a-a778-b0d4c5c86c0e",
+   "id": "fcda6686-a484-4b41-afd2-eb5d6f7f369d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../datasets/challenge2/train/mel ../datasets_masks/challenge2/train/mel\n",
+      "Segmenting images in ../datasets/challenge2/train/mel ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                    | 4/2713 [00:09<1:48:06,  2.39s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "base_path = '../datasets/'\n",
+    "challenges = ['challenge2']\n",
+    "\n",
+    "for challenge in challenges:\n",
+    "    challenge_dir = os.path.join(base_path, challenge)\n",
+    "\n",
+    "    # os.listdir(challenge_dir)\n",
+    "    for split in [dir for dir in os.listdir(challenge_dir) if dir != 'test']:\n",
+    "        split_path = os.path.join(challenge_dir, split)\n",
+    "        \n",
+    "        for split_folder in os.listdir(split_path):\n",
+    "            original_path = os.path.join(split_path, split_folder)\n",
+    "            new_path = original_path.replace('datasets', 'datasets_masks')\n",
+    "\n",
+    "            print(original_path, new_path)\n",
+    "\n",
+    "            create_directory_if_not_exists(new_path)\n",
+    "            \n",
+    "            print(f\"Segmenting images in {original_path} ...\")\n",
+    "            for image in tqdm(os.listdir(original_path)):\n",
+    "                img_path = os.path.join(original_path, image)\n",
+    "                mask_path = os.path.join(new_path, image)\n",
+    "\n",
+    "                segmentation = segment_wrapper.predict(img_path)\n",
+    "                cv2.imwrite(mask_path, segmentation)\n"
+   ]
   }
  ],
  "metadata": {
