--- a/notebooks/5_Challenge2_Experiments2.ipynb
+++ b/notebooks/5_Challenge2_Experiments2.ipynb
@@ -2988,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -3010,47 +3010,47 @@
       "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
       "\n",
       "Inference:   0%|          | 0/40 [00:00<?, ?it/s]\n",
-      "Inference:   2%|▎         | 1/40 [00:05<03:50,  5.92s/it]\n",
-      "Inference:   5%|▌         | 2/40 [00:06<01:49,  2.88s/it]\n",
-      "Inference:   8%|▊         | 3/40 [00:07<01:10,  1.91s/it]\n",
-      "Inference:  10%|█         | 4/40 [00:08<00:52,  1.45s/it]\n",
-      "Inference:  12%|█▎        | 5/40 [00:08<00:42,  1.20s/it]\n",
-      "Inference:  15%|█▌        | 6/40 [00:09<00:35,  1.05s/it]\n",
-      "Inference:  18%|█▊        | 7/40 [00:10<00:31,  1.05it/s]\n",
+      "Inference:   2%|▎         | 1/40 [00:05<03:47,  5.84s/it]\n",
+      "Inference:   5%|▌         | 2/40 [00:06<01:48,  2.85s/it]\n",
+      "Inference:   8%|▊         | 3/40 [00:07<01:10,  1.89s/it]\n",
+      "Inference:  10%|█         | 4/40 [00:08<00:51,  1.44s/it]\n",
+      "Inference:  12%|█▎        | 5/40 [00:08<00:41,  1.19s/it]\n",
+      "Inference:  15%|█▌        | 6/40 [00:09<00:35,  1.04s/it]\n",
+      "Inference:  18%|█▊        | 7/40 [00:10<00:31,  1.06it/s]\n",
       "Inference:  20%|██        | 8/40 [00:11<00:28,  1.13it/s]\n",
       "Inference:  22%|██▎       | 9/40 [00:11<00:26,  1.19it/s]\n",
-      "Inference:  25%|██▌       | 10/40 [00:12<00:24,  1.22it/s]\n",
-      "Inference:  28%|██▊       | 11/40 [00:13<00:23,  1.25it/s]\n",
-      "Inference:  30%|███       | 12/40 [00:14<00:22,  1.27it/s]\n",
-      "Inference:  32%|███▎      | 13/40 [00:14<00:20,  1.29it/s]\n",
-      "Inference:  35%|███▌      | 14/40 [00:15<00:19,  1.30it/s]\n",
+      "Inference:  25%|██▌       | 10/40 [00:12<00:24,  1.23it/s]\n",
+      "Inference:  28%|██▊       | 11/40 [00:13<00:23,  1.26it/s]\n",
+      "Inference:  30%|███       | 12/40 [00:14<00:21,  1.28it/s]\n",
+      "Inference:  32%|███▎      | 13/40 [00:14<00:20,  1.30it/s]\n",
+      "Inference:  35%|███▌      | 14/40 [00:15<00:19,  1.31it/s]\n",
       "Inference:  38%|███▊      | 15/40 [00:16<00:19,  1.31it/s]\n",
       "Inference:  40%|████      | 16/40 [00:17<00:18,  1.32it/s]\n",
       "Inference:  42%|████▎     | 17/40 [00:17<00:17,  1.32it/s]\n",
       "Inference:  45%|████▌     | 18/40 [00:18<00:16,  1.32it/s]\n",
-      "Inference:  48%|████▊     | 19/40 [00:19<00:15,  1.32it/s]\n",
-      "Inference:  50%|█████     | 20/40 [00:20<00:15,  1.32it/s]\n",
-      "Inference:  52%|█████▎    | 21/40 [00:20<00:14,  1.32it/s]\n",
-      "Inference:  55%|█████▌    | 22/40 [00:21<00:13,  1.32it/s]\n",
+      "Inference:  48%|████▊     | 19/40 [00:19<00:15,  1.33it/s]\n",
+      "Inference:  50%|█████     | 20/40 [00:20<00:15,  1.33it/s]\n",
+      "Inference:  52%|█████▎    | 21/40 [00:20<00:14,  1.33it/s]\n",
+      "Inference:  55%|█████▌    | 22/40 [00:21<00:13,  1.33it/s]\n",
       "Inference:  57%|█████▊    | 23/40 [00:22<00:12,  1.33it/s]\n",
       "Inference:  60%|██████    | 24/40 [00:23<00:12,  1.33it/s]\n",
       "Inference:  62%|██████▎   | 25/40 [00:23<00:11,  1.33it/s]\n",
       "Inference:  65%|██████▌   | 26/40 [00:24<00:10,  1.33it/s]\n",
       "Inference:  68%|██████▊   | 27/40 [00:25<00:09,  1.33it/s]\n",
       "Inference:  70%|███████   | 28/40 [00:26<00:09,  1.33it/s]\n",
-      "Inference:  72%|███████▎  | 29/40 [00:27<00:08,  1.33it/s]\n",
-      "Inference:  75%|███████▌  | 30/40 [00:27<00:07,  1.32it/s]\n",
+      "Inference:  72%|███████▎  | 29/40 [00:26<00:08,  1.33it/s]\n",
+      "Inference:  75%|███████▌  | 30/40 [00:27<00:07,  1.33it/s]\n",
       "Inference:  78%|███████▊  | 31/40 [00:28<00:06,  1.33it/s]\n",
-      "Inference:  80%|████████  | 32/40 [00:29<00:06,  1.32it/s]\n",
-      "Inference:  82%|████████▎ | 33/40 [00:30<00:05,  1.32it/s]\n",
-      "Inference:  85%|████████▌ | 34/40 [00:30<00:04,  1.32it/s]\n",
-      "Inference:  88%|████████▊ | 35/40 [00:31<00:03,  1.32it/s]\n",
+      "Inference:  80%|████████  | 32/40 [00:29<00:06,  1.33it/s]\n",
+      "Inference:  82%|████████▎ | 33/40 [00:29<00:05,  1.33it/s]\n",
+      "Inference:  85%|████████▌ | 34/40 [00:30<00:04,  1.33it/s]\n",
+      "Inference:  88%|████████▊ | 35/40 [00:31<00:03,  1.33it/s]\n",
       "Inference:  90%|█████████ | 36/40 [00:32<00:03,  1.33it/s]\n",
-      "Inference:  92%|█████████▎| 37/40 [00:33<00:02,  1.33it/s]\n",
+      "Inference:  92%|█████████▎| 37/40 [00:32<00:02,  1.33it/s]\n",
       "Inference:  95%|█████████▌| 38/40 [00:33<00:01,  1.33it/s]\n",
       "Inference:  98%|█████████▊| 39/40 [00:34<00:00,  1.33it/s]\n",
-      "Inference: 100%|██████████| 40/40 [00:36<00:00,  1.12s/it]\n",
-      "Inference: 100%|██████████| 40/40 [00:36<00:00,  1.09it/s]\n",
+      "Inference: 100%|██████████| 40/40 [00:36<00:00,  1.11s/it]\n",
+      "Inference: 100%|██████████| 40/40 [00:36<00:00,  1.10it/s]\n",
       "Results exported to: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2023-12-29_0940_VGG16_BN_Attention/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42_2023-12-29_0940_VGG16_BN_Attention.csv\n",
       "Computing AUC scores for each class...\n",
       "Figure(1500x600)\n",
@@ -3096,6 +3096,241 @@
     "                    --report'\n",
     "\n",
     "\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Changes to hair augmentation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting training pipeline with 50 epochs...\n",
+      "Loading data with 3 class labels...\n",
+      "Loading the data from ../datasets/challenge2/train\n",
+      "Loading the data from ../datasets/challenge2/val\n",
+      "Using segmentation masks for training...\n",
+      "train_images: 5082, train_masks: 5082, train_labels: 5082\n",
+      "Class weights: [0.62440103 0.84997491 4.50531915]\n",
+      "Creating a classifier experiment using VGG16_BN_Attention network.\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using focal loss.\n",
+      "Using dice loss.\n",
+      "Experiment started.\n",
+      "Epoch: 1 Train batch 10 loss: 0.47001636028289795, 6.3% complete\n",
+      "Epoch: 1 Train batch 20 loss: 0.4486575722694397, 12.6% complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2024-01-02_2253_VGG16_BN_Attention\n",
+    "command = 'python ../train.py --train_path \"../datasets/challenge2/train\" \\\n",
+    "                        --train_masks_path \"../datasets_masks/challenge2/train\" \\\n",
+    "                        --valid_path \"../datasets/challenge2/val\" \\\n",
+    "                        --experiment_name \"ClassifierSegExperiment\" \\\n",
+    "                        --network_name \"VGG16_BN_Attention\" \\\n",
+    "                        --max_epochs \"50\" \\\n",
+    "                        --base_lr \"0.00001\" \\\n",
+    "                        --batch_size \"32\" \\\n",
+    "                        --verbose \"2\" \\\n",
+    "                        --focal_loss \\\n",
+    "                        --multi'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<pre>\n",
+    "2024-01-03 13:00:28.754 | INFO     | experiments.ClassifierSegExperiment:run_test:387 - Test Accuracy: 0.93386\n",
+    "2024-01-03 13:00:28.755 | INFO     | experiments.ClassifierSegExperiment:run_test:388 - Test AUC: 0.98470\n",
+    "2024-01-03 13:00:28.756 | INFO     | experiments.ClassifierSegExperiment:run_test:389 - Test AUC Scores: [0.98784182 0.98899484 0.97724888]\n",
+    "2024-01-03 13:00:28.756 | INFO     | experiments.ClassifierSegExperiment:run_test:390 - Test Kappa: 0.87990\n",
+    "2024-01-03 13:00:28.756 | INFO     | experiments.ClassifierSegExperiment:run_test:394 - Target 0 - Precision: 0.95051, Recall: 0.96313, F-score: 0.95678, Sensitivity: 0.9631268436578171, Specificity: 0.9425675675675675, Support: 678\n",
+    "2024-01-03 13:00:28.757 | INFO     | experiments.ClassifierSegExperiment:run_test:394 - Target 1 - Precision: 0.93267, Recall: 0.94578, F-score: 0.93918, Sensitivity: 0.9457831325301205, Specificity: 0.9559585492227979, Support: 498\n",
+    "2024-01-03 13:00:28.757 | INFO     | experiments.ClassifierSegExperiment:run_test:394 - Target 2 - Precision: 0.79487, Recall: 0.65957, F-score: 0.72093, Sensitivity: 0.6595744680851063, Specificity: 0.9863945578231292, Support: 94\n",
+    "2024-01-03 13:00:28.757 | INFO     | experiments.ClassifierSegExperiment:run_test:396 - \n",
+    "Classification Report:\n",
+    "            precision    recall  f1-score   support\n",
+    "\n",
+    "            0       0.95      0.96      0.96       678\n",
+    "            1       0.93      0.95      0.94       498\n",
+    "            2       0.79      0.66      0.72        94\n",
+    "\n",
+    "      accuracy                            0.93      1270\n",
+    "      macro avg       0.89      0.86      0.87      1270\n",
+    "      weighted avg    0.93      0.93      0.93      1270\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting training pipeline with 50 epochs and 5 folds.\n",
+      "Loading data with 3 class labels...\n",
+      "Loading the data from ../datasets/challenge2/train\n",
+      "Loading the data from ../datasets/challenge2/val\n",
+      "Using segmentation masks for training...\n",
+      "train_images: 5082, train_masks: 5082, train_labels: 5082\n",
+      "val_images: 1270, val_masks: 1270, val_labels: 1270\n",
+      "Class weights: [0.62427817 0.85023427 4.50443262]\n",
+      "Creating a classifier experiment using VGG16_BN_Attention network.\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using focal loss.\n",
+      "Using dice loss.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2024-01-03_1221_VGG16_BN_Attention\n",
+    "command = 'python ../train_cv.py \\\n",
+    "                    --train_path \"../datasets/challenge2/train\" \\\n",
+    "                    --train_masks_path \"../datasets_masks/challenge2/train\" \\\n",
+    "                    --valid_path \"../datasets/challenge2/val\" \\\n",
+    "                    --valid_masks_path \"../datasets_masks/challenge2/val\"\\\n",
+    "                    --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "                    --network_name \"VGG16_BN_Attention\" \\\n",
+    "                    --max_epochs \"50\" \\\n",
+    "                    --base_lr \"0.00001\" \\\n",
+    "                    --num_folds \"5\" \\\n",
+    "                    --batch_size \"32\" \\\n",
+    "                    --verbose \"1\" \\\n",
+    "                    --focal_loss \\\n",
+    "                    --multi'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excuting inference script...\n",
+      "Namespace(test_path='../datasets/challenge2/val', output='outputs', experiment_name='ClassifierSegExperimentCV', network_name='VGG16_BN_Attention', max_epochs=50, batch_size=32, base_lr=1e-05, img_size=224, seed=42, timeframe='2024-01-03_1221', verbose=2, multi=True, report=True, ensemble=True)\n",
+      "Constructed output path: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2024-01-03_1221_VGG16_BN_Attention. Searching for models...\n",
+      "Found 5 models. Starting loading the models.\n",
+      "Loading data with 3 class labels from ../datasets/challenge2/val path...\n",
+      "Dataset labels: {'mel': 0, 'bcc': 1, 'scc': 2} dictionary.\n",
+      "Loading the data from ../datasets/challenge2/val\n",
+      "Dataset length: 1270\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "Using VGG16_BN_Attention with configurations: num_classes='3', normalize_attn='False'\n",
+      "\n",
+      "Inference:   0%|          | 0/40 [00:00<?, ?it/s]\n",
+      "Inference:   2%|▎         | 1/40 [00:06<03:55,  6.03s/it]\n",
+      "Inference:   5%|▌         | 2/40 [00:06<01:51,  2.93s/it]\n",
+      "Inference:   8%|▊         | 3/40 [00:07<01:11,  1.94s/it]\n",
+      "Inference:  10%|█         | 4/40 [00:08<00:52,  1.47s/it]\n",
+      "Inference:  12%|█▎        | 5/40 [00:09<00:42,  1.21s/it]\n",
+      "Inference:  15%|█▌        | 6/40 [00:09<00:35,  1.05s/it]\n",
+      "Inference:  18%|█▊        | 7/40 [00:10<00:31,  1.05it/s]\n",
+      "Inference:  20%|██        | 8/40 [00:11<00:28,  1.13it/s]\n",
+      "Inference:  22%|██▎       | 9/40 [00:12<00:26,  1.19it/s]\n",
+      "Inference:  25%|██▌       | 10/40 [00:12<00:24,  1.23it/s]\n",
+      "Inference:  28%|██▊       | 11/40 [00:13<00:23,  1.26it/s]\n",
+      "Inference:  30%|███       | 12/40 [00:14<00:21,  1.28it/s]\n",
+      "Inference:  32%|███▎      | 13/40 [00:15<00:20,  1.30it/s]\n",
+      "Inference:  35%|███▌      | 14/40 [00:15<00:19,  1.31it/s]\n",
+      "Inference:  38%|███▊      | 15/40 [00:16<00:19,  1.31it/s]\n",
+      "Inference:  40%|████      | 16/40 [00:17<00:18,  1.32it/s]\n",
+      "Inference:  42%|████▎     | 17/40 [00:18<00:17,  1.32it/s]\n",
+      "Inference:  45%|████▌     | 18/40 [00:18<00:16,  1.33it/s]\n",
+      "Inference:  48%|████▊     | 19/40 [00:19<00:15,  1.33it/s]\n",
+      "Inference:  50%|█████     | 20/40 [00:20<00:15,  1.33it/s]\n",
+      "Inference:  52%|█████▎    | 21/40 [00:21<00:14,  1.33it/s]\n",
+      "Inference:  55%|█████▌    | 22/40 [00:21<00:13,  1.33it/s]\n",
+      "Inference:  57%|█████▊    | 23/40 [00:22<00:12,  1.33it/s]\n",
+      "Inference:  60%|██████    | 24/40 [00:23<00:12,  1.33it/s]\n",
+      "Inference:  62%|██████▎   | 25/40 [00:24<00:11,  1.33it/s]\n",
+      "Inference:  65%|██████▌   | 26/40 [00:24<00:10,  1.33it/s]\n",
+      "Inference:  68%|██████▊   | 27/40 [00:25<00:09,  1.33it/s]\n",
+      "Inference:  70%|███████   | 28/40 [00:26<00:09,  1.33it/s]\n",
+      "Inference:  72%|███████▎  | 29/40 [00:27<00:08,  1.33it/s]\n",
+      "Inference:  75%|███████▌  | 30/40 [00:27<00:07,  1.33it/s]\n",
+      "Inference:  78%|███████▊  | 31/40 [00:28<00:06,  1.33it/s]\n",
+      "Inference:  80%|████████  | 32/40 [00:29<00:06,  1.33it/s]\n",
+      "Inference:  82%|████████▎ | 33/40 [00:30<00:05,  1.33it/s]\n",
+      "Inference:  85%|████████▌ | 34/40 [00:30<00:04,  1.34it/s]\n",
+      "Inference:  88%|████████▊ | 35/40 [00:31<00:03,  1.34it/s]\n",
+      "Inference:  90%|█████████ | 36/40 [00:32<00:02,  1.34it/s]\n",
+      "Inference:  92%|█████████▎| 37/40 [00:33<00:02,  1.34it/s]\n",
+      "Inference:  95%|█████████▌| 38/40 [00:33<00:01,  1.34it/s]\n",
+      "Inference:  98%|█████████▊| 39/40 [00:34<00:00,  1.34it/s]\n",
+      "Inference: 100%|██████████| 40/40 [00:36<00:00,  1.10s/it]\n",
+      "Inference: 100%|██████████| 40/40 [00:36<00:00,  1.10it/s]\n",
+      "Results exported to: outputs/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42/2024-01-03_1221_VGG16_BN_Attention/ClassifierSegExperimentCV_224_epo50_bs32_lr1e-05_s42_2024-01-03_1221_VGG16_BN_Attention.csv\n",
+      "Computing AUC scores for each class...\n",
+      "Figure(1500x600)\n",
+      "Majority vote AUC: 0.99855\n",
+      "Majority vote AUC Scores: [0.99859733 0.99887633 0.99816363]\n",
+      "Majority vote accuracy: 0.974015748031496\n",
+      "Majority vote kappa: 0.9532099890142279\n",
+      "Target 0 - Precision: 0.98519, Recall: 0.98083, F-score: 0.98300, Sensitivity: 0.9808259587020649, Specificity: 0.9831081081081081, Support: 678\n",
+      "Target 1 - Precision: 0.97024, Recall: 0.98193, F-score: 0.97605, Sensitivity: 0.9819277108433735, Specificity: 0.9805699481865285, Support: 498\n",
+      "Target 2 - Precision: 0.91209, Recall: 0.88298, F-score: 0.89730, Sensitivity: 0.8829787234042553, Specificity: 0.9931972789115646, Support: 94\n",
+      "(   {   'accuracy': 0.974015748031496,\n",
+      "        'auc': 0.9985457622357509,\n",
+      "        'auc_scores': [   0.9985973252013075,\n",
+      "                          0.9988763343529559,\n",
+      "                          0.9981636271529889],\n",
+      "        'fscore': [0.9830007390983, 0.9760479041916169, 0.8972972972972972],\n",
+      "        'kappa': 0.9532099890142279,\n",
+      "        'precision': [   0.9851851851851852,\n",
+      "                         0.9702380952380952,\n",
+      "                         0.9120879120879121],\n",
+      "        'recall': [0.9808259587020649, 0.9819277108433735, 0.8829787234042553],\n",
+      "        'sensitivity': [   0.9808259587020649,\n",
+      "                           0.9819277108433735,\n",
+      "                           0.8829787234042553],\n",
+      "        'specificity': [   0.9831081081081081,\n",
+      "                           0.9805699481865285,\n",
+      "                           0.9931972789115646],\n",
+      "        'support': [678, 498, 94]},)\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = 'python ../inference.py --test_path \"../datasets/challenge2/val\" \\\n",
+    "                    --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "                    --network_name \"VGG16_BN_Attention\" \\\n",
+    "                    --max_epochs \"50\" \\\n",
+    "                    --base_lr \"0.00001\" \\\n",
+    "                    --batch_size \"32\" \\\n",
+    "                    --timeframe \"2024-01-03_1221\" \\\n",
+    "                    --verbose \"2\" \\\n",
+    "                    --multi \\\n",
+    "                    --ensemble \\\n",
+    "                    --report'\n",
     "\n",
     "# run the function to excute the command\n",
     "_ = execute_cmd_realtime(command, log=True)"
