--- a/notebooks/2_Challenge1_Experiments2.ipynb
+++ b/notebooks/2_Challenge1_Experiments2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5434,6 +5434,37 @@
     "\n",
     "# run the function to excute the command\n",
     "_ = execute_cmd_realtime(command, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# command = 'python ../inference.py --test_path \"../datasets/challenge1/val\" \\\n",
+    "#                     --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "#                     --network_name \"VGG16_BN_Attention\" \\\n",
+    "#                     --max_epochs \"50\" \\\n",
+    "#                     --base_lr \"0.00001\" \\\n",
+    "#                     --batch_size \"32\" \\\n",
+    "#                     --timeframe \"2023-12-24_2131\" \\\n",
+    "#                     --verbose \"2\" \\\n",
+    "#                     --ensemble \\\n",
+    "#                     --report'\n",
+    "\n",
+    "# command = 'python ../inference.py --test_path \"../datasets/challenge1/test\" \\\n",
+    "#                     --experiment_name \"ClassifierSegExperimentCV\" \\\n",
+    "#                     --network_name \"VGG16_BN_Attention\" \\\n",
+    "#                     --max_epochs \"50\" \\\n",
+    "#                     --base_lr \"0.00001\" \\\n",
+    "#                     --batch_size \"32\" \\\n",
+    "#                     --timeframe \"2023-12-24_2131\" \\\n",
+    "#                     --verbose \"2\" \\\n",
+    "#                     --ensemble'\n",
+    "\n",
+    "# run the function to excute the command\n",
+    "# _ = execute_cmd_realtime(command, log=True)"
    ]
   },
   {
